# gcp-container-batch

./: .gitignore  LICENSE.txt  README.md
cloud_run/run_container_on_gce/: Dockerfile  create_gcr_image.sh  deploy_cloud_run.sh  gce_startup.sh  main.py  pyproject.toml
terraform/: .terraform.lock.hcl  apply.sh  cloud_run.tf  iam.tf  init.sh  main.tf  plan.sh  pubsub.tf  variables.tf
